更新关于电子书网站和 Mihon/Suwayomi 的描述，添加下载资源和参考教程信息

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <details>
                 <summary>关于电子书网站</summary>
                 <p>漫画本质上也属于书籍，因此，我们自然可以从电子书网站入手。不过，这类综合性网站通常不会为漫画做专门优化，且上传者也更倾向于将资源发布在专门的漫画网站上。因此，在电子书网站上找漫画<strong>资源偏少，并非首选</strong>。</p>
+                <p>其中，zlib 下载更方便，annas 资源更丰富。</p>
             </details>
 
             <h3 class="sub-title">电子书网站</h3>
@@ -106,7 +107,9 @@
 
             <details>
                 <summary>关于 Mihon 与 Suwayomi</summary>
-                <p>Mihon 是一款安卓平台的免费开源漫画阅读器，其前身为著名的 Tachiyomi, 支持在线阅读。Mihon 的漫画资源主要靠插件获取，因此 Mihon 在插件加持下，聚合了巨量的漫画资源。</p>
+                <p>Mihon 是一款安卓平台的免费开源漫画阅读器，其前身为著名的 Tachiyomi, 支持在线阅读。Mihon 的漫画资源主要靠插件获取，因此 Mihon 在插件加持下，聚合了巨量的漫画资源。以 keiyoushi 插件为例，该插件总计聚合 1266 个网站，可谓之“穷搜”。</p>
+                <p>当然，没有哪个插件是万能的。比如 keiyoushi 未收录的 拷貝漫畫，就可以通过 LittleSurvival 制作的独立插件 进行补充。</p>
+                <p>另外，Mihon 也支持将漫画资源下载到本地，便于离线阅读或收藏。</p>
                 <p>Suwayomi 可以看作是 Mihon 的 PC 版本，同样通过插件扩展图源。</p>
             </details>
 
@@ -116,6 +119,7 @@
                     <h3>Mihon (Android)</h3>
                     <p class="desc">免费开源漫画阅读器 (原Tachiyomi)</p>
                     <a href="https://github.com/mihonapp/mihon" target="_blank" class="btn">GitHub</a>
+                    <a href="https://liushuixiu.github.io/pages/7c4c5c/" target="_blank" class="btn" style="margin-top: 5px;">参考教程</a>
                 </div>
                 <div class="card">
                     <h3>Keiyoushi 插件</h3>
@@ -137,6 +141,7 @@
             <details>
                 <summary>关于资源下载</summary>
                 <p>这些网站已经将资源打包好，只需下载解压即可。当然这需要一个稳定的网盘下载方法，以及各式各样的解压方法。</p>
+                <p>补充：“补档冰室”似乎已经挂掉了，默哀。</p>
                 <p>另外，理论上所有的在线资源网站都可以通过各种手段下载为本地资源，Mihon 就是个很好的例子。也可以通过浏览器扩展来下载在线阅读网站的漫画资源。</p>
             </details>
 
