更新 Suwayomi 链接，修改在线阅读网站标题为“冷门网站”，并增强可折叠细节的样式和交互效果

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <div class="card">
                     <h3>Suwayomi (PC)</h3>
                     <p class="desc">Mihon 的 PC 版本</p>
-                    <a href="https://liushuixiu.github.io/pages/ce3b06/" target="_blank" class="btn">查看教程</a>
+                    <a href="https://github.com/Suwayomi/Suwayomi-Server" target="_blank" class="btn">GitHub</a>
+                    <a href="https://liushuixiu.github.io/pages/ce3b06/" target="_blank" class="btn" style="margin-top: 5px;">查看教程</a>
                 </div>
             </div>
 
@@ -165,7 +166,7 @@
             </div>
 
             <p class="section-desc">至于那些热门的漫画网站，相信大家早已耳熟能详。这里主要推荐几个相对冷门但资源质量不错的网站。</p>
-            <h3 class="sub-title">在线阅读网站</h3>
+            <h3 class="sub-title">冷门网站</h3>
             <div class="card-grid">
                 <div class="card">
                     <h3>JComic</h3>
