更新电子书网站和插件描述，增强信息清晰度和可读性

--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
             <details>
                 <summary>关于电子书网站</summary>
                 <p>漫画本质上也属于书籍，因此，我们自然可以从电子书网站入手。不过，这类综合性网站通常不会为漫画做专门优化，且上传者也更倾向于将资源发布在专门的漫画网站上。因此，在电子书网站上找漫画<strong>资源偏少，并非首选</strong>。</p>
-                <p>其中，zlib 下载更方便，annas 资源更丰富。</p>
             </details>
 
             <h3 class="sub-title">电子书网站</h3>
             <div class="card-grid">
                 <div class="card">
                     <h3>Z-library</h3>
-                    <p class="desc">全球最大的数字图书馆之一</p>
+                    <p class="desc">全球最大的数字图书馆之一，下载更方便</p>
                     <a href="https://z-library.sk/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
@@ -123,7 +122,7 @@
                 </div>
                 <div class="card">
                     <h3>Keiyoushi 插件</h3>
-                    <p class="desc">Mihon 插件仓库</p>
+                    <p class="desc">Mihon 插件仓库，聚合 1000+ 网站，资源穷搜</p>
                     <a href="https://github.com/keiyoushi/extensions" target="_blank" class="btn">GitHub</a>
                 </div>
                 <div class="card">
@@ -212,7 +211,7 @@
                 </div>
                 <div class="card">
                     <h3>Nyaa (BT)</h3>
-                    <p class="desc">BT 资源站，热门资源速度快</p>
+                    <p class="desc">BT 资源站，热门资源速度快，清晰度高</p>
                     <a href="https://nyaa.si/" target="_blank" class="btn">访问链接</a>
                 </div>
             </div>
@@ -256,12 +255,12 @@
                 </div>
                 <div class="card">
                     <h3>Pixiv</h3>
-                    <p class="desc">全球最大的插画漫画社区</p>
+                    <p class="desc">全球最大的插画漫画社区，优质短篇、同人作品</p>
                     <a href="https://www.pixiv.net/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
                     <h3>Haruneko</h3>
-                    <p class="desc">在线漫画下载工具</p>
+                    <p class="desc">在线漫画下载工具，适用于在线连载漫画</p>
                     <a href="https://github.com/manga-download/haruneko" target="_blank" class="btn">GitHub</a>
                 </div>
             </div>
