更新资源下载部分，删除失效链接并优化描述，增强信息准确性

--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
             <details>
                 <summary>关于资源下载</summary>
                 <p>这些网站已经将资源打包好，只需下载解压即可。当然这需要一个稳定的网盘下载方法，以及各式各样的解压方法。</p>
-                <p>补充：“补档冰室”似乎已经挂掉了，默哀。</p>
                 <p>另外，理论上所有的在线资源网站都可以通过各种手段下载为本地资源，Mihon 就是个很好的例子。也可以通过浏览器扩展来下载在线阅读网站的漫画资源。</p>
             </details>
 
@@ -153,8 +152,8 @@
                     <a href="https://mox.moe/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
-                    <h3>manhuabd</h3>
-                    <p class="desc">漫画补档论坛</p>
+                    <h3>补档冰室</h3>
+                    <p class="desc">漫画补档论坛 (似乎已经挂掉了，默哀)</p>
                     <a href="https://www.manhuabudangbbs.com/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
@@ -236,12 +235,6 @@
 
         <section id="other" class="category-section">
             <h2><i class="fas fa-ellipsis-h"></i> 其他途径</h2>
-            <details>
-                <summary>更多途径说明</summary>
-                <p><strong>Pixiv:</strong> 全球最大的艺术家插画漫画交流社区之一，汇聚了海量日本乃至全球的漫画家与插画师。你可以在上面找到不计其数的优质短篇、同人作品，甚至是一些独家连载。</p>
-                <p><strong>群组:</strong> 比如微信群，QQ群都有可能流通漫画资源，无论生肉熟肉。个人常用的群组是百度贴吧和 Telegram。</p>
-                <p><strong>Haruneko:</strong> 适用于在线连载的漫画，可以通过此工具将其下载到本地，推荐配合插件下载。</p>
-            </details>
             <div class="card-grid">
                 <div class="card">
                     <h3>梓喵 (PT)</h3>
@@ -255,12 +248,17 @@
                 </div>
                 <div class="card">
                     <h3>Pixiv</h3>
-                    <p class="desc">全球最大的插画漫画社区，优质短篇、同人作品</p>
+                    <p class="desc">全球最大的插画漫画社区，汇聚海量画师。可找到优质短篇、同人作品及独家连载。</p>
                     <a href="https://www.pixiv.net/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
+                    <h3>群组</h3>
+                    <p class="desc">微信群、QQ群、百度贴吧、Telegram 等都有可能流通漫画资源。</p>
+                    <a href="https://tieba.baidu.com/" target="_blank" class="btn">百度贴吧</a>
+                </div>
+                <div class="card">
                     <h3>Haruneko</h3>
-                    <p class="desc">在线漫画下载工具，适用于在线连载漫画</p>
+                    <p class="desc">在线漫画下载工具，适用于在线连载漫画。推荐配合插件下载。</p>
                     <a href="https://github.com/manga-download/haruneko" target="_blank" class="btn">GitHub</a>
                 </div>
             </div>
