--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <meta name="google-site-verification" content="xx7-8RU5JdXhvUIb3tJ2YaiqVac1Oq8jzVGvcFTOQGs" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>漫画资源导航</title>
@@ -88,13 +89,14 @@
             <details>
                 <summary>关于电子书网站</summary>
                 <p>漫画本质上也属于书籍，因此，我们自然可以从电子书网站入手。不过，这类综合性网站通常不会为漫画做专门优化，且上传者也更倾向于将资源发布在专门的漫画网站上。因此，在电子书网站上找漫画<strong>资源偏少，并非首选</strong>。</p>
+                <p>其中，zlib 下载更方便，annas 资源更丰富。</p>
             </details>
 
             <h3 class="sub-title">电子书网站</h3>
             <div class="card-grid">
                 <div class="card">
                     <h3>Z-library</h3>
-                    <p class="desc">全球最大的数字图书馆之一，下载更方便</p>
+                    <p class="desc">全球最大的数字图书馆之一</p>
                     <a href="https://z-library.sk/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
@@ -122,7 +124,7 @@
                 </div>
                 <div class="card">
                     <h3>Keiyoushi 插件</h3>
-                    <p class="desc">Mihon 插件仓库，聚合 1000+ 网站，资源穷搜</p>
+                    <p class="desc">Mihon 插件仓库</p>
                     <a href="https://github.com/keiyoushi/extensions" target="_blank" class="btn">GitHub</a>
                 </div>
                 <div class="card">
@@ -133,14 +135,14 @@
                 <div class="card">
                     <h3>Suwayomi (PC)</h3>
                     <p class="desc">Mihon 的 PC 版本</p>
-                    <a href="https://github.com/Suwayomi/Suwayomi-Server" target="_blank" class="btn">GitHub</a>
-                    <a href="https://liushuixiu.github.io/pages/ce3b06/" target="_blank" class="btn" style="margin-top: 5px;">查看教程</a>
+                    <a href="https://liushuixiu.github.io/pages/ce3b06/" target="_blank" class="btn">查看教程</a>
                 </div>
             </div>
 
             <details>
                 <summary>关于资源下载</summary>
                 <p>这些网站已经将资源打包好，只需下载解压即可。当然这需要一个稳定的网盘下载方法，以及各式各样的解压方法。</p>
+                <p>补充：“补档冰室”似乎已经挂掉了，默哀。</p>
                 <p>另外，理论上所有的在线资源网站都可以通过各种手段下载为本地资源，Mihon 就是个很好的例子。也可以通过浏览器扩展来下载在线阅读网站的漫画资源。</p>
             </details>
 
@@ -152,8 +154,8 @@
                     <a href="https://mox.moe/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
-                    <h3>补档冰室</h3>
-                    <p class="desc">漫画补档论坛 (似乎已经挂掉了，默哀)</p>
+                    <h3>manhuabd</h3>
+                    <p class="desc">漫画补档论坛</p>
                     <a href="https://www.manhuabudangbbs.com/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
@@ -164,7 +166,7 @@
             </div>
 
             <p class="section-desc">至于那些热门的漫画网站，相信大家早已耳熟能详。这里主要推荐几个相对冷门但资源质量不错的网站。</p>
-            <h3 class="sub-title">冷门网站</h3>
+            <h3 class="sub-title">在线阅读网站</h3>
             <div class="card-grid">
                 <div class="card">
                     <h3>JComic</h3>
@@ -210,7 +212,7 @@
                 </div>
                 <div class="card">
                     <h3>Nyaa (BT)</h3>
-                    <p class="desc">BT 资源站，热门资源速度快，清晰度高</p>
+                    <p class="desc">BT 资源站，热门资源速度快</p>
                     <a href="https://nyaa.si/" target="_blank" class="btn">访问链接</a>
                 </div>
             </div>
@@ -235,6 +237,12 @@
 
         <section id="other" class="category-section">
             <h2><i class="fas fa-ellipsis-h"></i> 其他途径</h2>
+            <details>
+                <summary>更多途径说明</summary>
+                <p><strong>Pixiv:</strong> 全球最大的艺术家插画漫画交流社区之一，汇聚了海量日本乃至全球的漫画家与插画师。你可以在上面找到不计其数的优质短篇、同人作品，甚至是一些独家连载。</p>
+                <p><strong>群组:</strong> 比如微信群，QQ群都有可能流通漫画资源，无论生肉熟肉。个人常用的群组是百度贴吧和 Telegram。</p>
+                <p><strong>Haruneko:</strong> 适用于在线连载的漫画，可以通过此工具将其下载到本地，推荐配合插件下载。</p>
+            </details>
             <div class="card-grid">
                 <div class="card">
                     <h3>梓喵 (PT)</h3>
@@ -248,17 +256,12 @@
                 </div>
                 <div class="card">
                     <h3>Pixiv</h3>
-                    <p class="desc">全球最大的插画漫画社区，汇聚海量画师。可找到优质短篇、同人作品及独家连载。</p>
+                    <p class="desc">全球最大的插画漫画社区</p>
                     <a href="https://www.pixiv.net/" target="_blank" class="btn">访问链接</a>
                 </div>
                 <div class="card">
-                    <h3>群组</h3>
-                    <p class="desc">微信群、QQ群、百度贴吧、Telegram 等都有可能流通漫画资源。</p>
-                    <a href="https://tieba.baidu.com/" target="_blank" class="btn">百度贴吧</a>
-                </div>
-                <div class="card">
                     <h3>Haruneko</h3>
-                    <p class="desc">在线漫画下载工具，适用于在线连载漫画。推荐配合插件下载。</p>
+                    <p class="desc">在线漫画下载工具</p>
                     <a href="https://github.com/manga-download/haruneko" target="_blank" class="btn">GitHub</a>
                 </div>
             </div>
